got toggle button full functionality. fixed z-indexof nav bar so its always visible

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -32,14 +32,25 @@ main {
 }
 
 button {
-  background-color: #FFFF00;
   float: right;
-  margin-top: 20px;
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
 }
 
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
+ fix button(specify)
  */
 
 
