--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,6 +7,7 @@ nav {
   width: 100%;
   padding-right: 45px;
   padding-left: 45px;
+  z-index: 100;
 
 }
 
